--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -3,7 +3,7 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
-        <main class="center">
+        <main class="centered">
             <h1><%= product.title %></h1>
             <hr>
             <div>
@@ -11,8 +11,6 @@
             </div>
             <h2><%= product.price %></h2>
             <p><%= product.description %></p>
-            <form action="/cart" method="post">
-                <button class="btn" type="submit">Add to Cart</button>
-            </form>
+            <%- include('../includes/add-to-cart.ejs') %>
         </main>
         <%- include('../includes/end.ejs') %>
