--- a/public/css/main.css
+++ b/public/css/main.css
@@ -215,6 +215,22 @@ form {
   background: red;
   color: white;
 }
+.pagination {
+  margin-top: 2rem;
+  text-align: center;
+}
+.pagination a {
+  text-decoration: none;
+  color: #00695c;
+  padding: 0.5rem;
+  border: 1px solid #00695c;
+  margin: 0 1rem;
+}
+.pagination a:hover, 
+.pagination a:active {
+  background-color: #00695c;
+  color: white;
+}
 
 @media (min-width: 768px) {
   .main-header__nav {
